fix: use text-wrap: balance in BudouX

--- a/src/styles/config/_mixins.scss
+++ b/src/styles/config/_mixins.scss
@@ -46,3 +46,11 @@ $breakpoints: (
     word-break: auto-phrase;
   }
 }
+
+@mixin text-wrap-balance {
+  text-wrap: wrap;
+
+  @supports (text-wrap: balance) {
+    text-wrap: balance;
+  }
+}
